<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/sensList"
                android:icon="@android:drawable/ic_menu_sort_alphabetically"
                android:title="@string/menu_sensor"/>
        <item
                android:id="@+id/nav_shared"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_shared"/>
        <item
                android:id="@+id/nav_magic"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_magic"/>
        <item
                android:id="@+id/nav_contacts"
                android:icon="@android:drawable/ic_lock_lock"
                android:title="@string/menu_Contacts"/>
        <item android:title="@string/menu_8" android:id="@+id/nav_8" android:icon="@drawable/ic_menu_send"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
