<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent" tools:layout_editor_absoluteY="81dp">

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/buttonSendInp" android:text="@string/shared_button_send" android:onClick="onClick"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewShared"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:text="@string/shared_views" android:layout_marginTop="128dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_shared" android:visibility="visible"/>
    <TextView
            android:text="@string/shared_views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:id="@+id/textViewForget"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textViewShared"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="32dp"
            android:visibility="visible"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="248dp"
            android:layout_height="wrap_content" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@+id/buttonSendInp"
            android:layout_marginEnd="10dp" android:id="@+id/textInputLayout" android:visibility="visible">

    </android.support.design.widget.TextInputLayout>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText_shared" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/buttonSendInp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/shared_input" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"/>
</android.support.constraint.ConstraintLayout>